src/test/deca/context/invalid/Objet/Field-Parent-Method.deca
// Description:
//      Declaring a void field
//
// Results:
//      Line 17 : Rule (2.5) Identifier is used a non-field in a parent class
//
// History:
//      created on 17/1/2022

class B {
    void x() {

    }
}

class A extends B {
    int x;
}